fixed menu sizing on mobile portrait mode

--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,13 @@ footer {
     }
 }
 
+@media (max-height: 450px) {
+    #navbar-dropdown {
+        line-height: 1.2;
+        font-size: 16px !important;
+    }
+}
+
 @media (max-width:992px) {
 
 }
